-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.2.1
-
None
-
Windows 10, MSVC2015, Qt5.7.1
-
779de6dde45e8173eff748dcb311c60c58e4ae60 (in qbs)
To reproduce:
- Create a new project and choose "plain C++ application"
- Choose qbs build system
- edit qbs file and add this line to the group: qbs.installDir: "../bin"
- build and run
It fails to start the application because it search for it in a bad place, here is the error prompted by qtcreator:
"Executable C:\projects\build-qtcreatorbug-sf112-Desktop_Qt_5_7_1_MSVC2015_32bit2-Debug\qtc_Desktop__a1af886e-debug\install-root\rbug-sf112.exe does not exist."
The correct path is : "C:\projects\build-qtcreatorbug-sf112-Desktop_Qt_5_7_1_MSVC2015_32bit2-Debug\qtc_Desktop__a1af886e-debug\bin\qtcreatorbug-sf112.exe"
See also how strange it is that it shortened the executable name...
It works fine with qtcreator 4.1
For Gerrit Dashboard: QTCREATORBUG-17790 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
187062,2 | Prevent files from getting installed outside the install root | master | qbs/qbs | Status: MERGED | +2 | 0 |