tests/auto/blackbox/testdata/invalid-install-dir/invalid-install-dir.qbs
@@ -1,0 +1,11 @@
+import qbs
+
+CppApplication {
+    consoleApplication: true
+    files: ["main.cpp"]
+    Group {
+        fileTagsFilter: ["application"]
+        qbs.install: true
+        qbs.installDir: "../whatever"
+    }
+}
